Home nav update.

--- a/_includes/nav-home.html
+++ b/_includes/nav-home.html
@@ -1,8 +1,7 @@
 <nav class="text-right" role="navigation">
   <ul class="list-unstyled list-inline">
-    <li><a data-scroll-to="#top">Home</a></li>
-    <li><a data-scroll-to="#about" data-scroll-offset="-90">About</a></li>
-    <li><a data-scroll-to="#faq" data-scroll-offset="-90">FAQ</a></li>
-    <li><a data-scroll-to="#contact" data-scroll-offset="-90">Contact</a></li>
+    {% for page in pages %}
+      <li><a data-scroll-to="#{{page.meta.section_id}}" data-scroll-offset="-90">{{page.meta.nav_title | fallback:page.title}}</a></li>
+    {% endfor %}
   </ul>
 </nav>
