Markdown slogan on homepage.

--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -15,7 +15,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12">
-        <h1>{{meta.slogan}}</h1>
+        <h1>{{meta.slogan | markdown}}</h1>
       </div>
     </div>
   </div>
