--- a/_assets/stylesheets/public.scss
+++ b/_assets/stylesheets/public.scss
@@ -19,9 +19,9 @@ header.page {
   .container { padding-top: 10px; padding-bottom: 10px; }
   nav { margin-top: 15px; }
   .header-fixed {
-    position: fixed; z-index: 10000; top: 0; left: 0; width: 100%; background-color: $dark-gray; opacity: 0;
+    position: fixed; z-index: 10000; top: 0; left: 0; width: 100%; background-color: $dark-gray; opacity: 0; visibility: hidden;
     @include transition(opacity 0.3s linear);
-    &.affix { opacity: 1; }
+    &.affix { opacity: 1; visibility: visible; }
     a {
       color: white;
       &:hover { color: darken(white, 10%); border-bottom: 1px dotted darken(white, 10%); }
