Updated home image and styles.

--- a/_assets/stylesheets/home.scss
+++ b/_assets/stylesheets/home.scss
@@ -2,7 +2,7 @@
 
 header.page {
   .header-home {
-    color: white; height: 500px; background-image: url("/assets/images/header-home.jpg"); background-size: cover;
+    color: white; height: 500px; background-image: url("https://source.unsplash.com/user/triggameh/likes"); background-size: cover; background-position: center center;
     margin-bottom: 20px; position: relative;
     a {
       color: white;
