--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -12,7 +12,7 @@
     </div>
     <div class="row">
       <div class="col-xs-12 text-center">
-        <img src="/assets/images/logo-home.png" alt="{{site.title}}" width="380">
+        <img src="/assets/images/logo-home.png" alt="{{site.title}}" width="380" style="margin-top: 30px;">
       </div>
     </div>
   </div>
