--- a/_assets/stylesheets/fonts.scss
+++ b/_assets/stylesheets/fonts.scss
@@ -1,3 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Slabo+27px);
+@import url(https://fonts.googleapis.com/css?family=Slabo+27px);
 
 $headline-font: 'Slabo 27px', serif;
